--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/nikolas/react-moonphase#readme",
   "dependencies": {
     "@babel/cli": "^7.0.0",
-    "pixi.js": "~4.8.2",
+    "pixi.js-legacy": "~5.0.0",
     "react": "~16.8.0",
     "react-dom": "~16.8.0"
   },
