--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "pixi.js-legacy": "~6.1.0",
-    "react": "~16.14.0",
-    "react-dom": "~16.14.0"
+    "prop-types": "^15.8.1",
+    "react": "~17.0.2",
+    "react-dom": "~17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
