--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.1",
   "description": "Display lunar phase with React and Pixi.js",
   "main": "build/index.js",
+  "type": "module",
   "scripts": {
     "dev": "webpack --mode development --watch",
     "build": "babel lib -d build",
