--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,5 +23,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - run: npm install
-
       - run: make eslint
+      - run: make build
